--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
         body { font-family: 'Inter', sans-serif; }
         .backdrop-blur-md { backdrop-filter: blur(12px); }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-  }
-}
-</script>
+    <script>
+      // Shim process.env for browser compatibility to prevent ReferenceErrors
+      window.process = window.process || { env: {} };
+    </script>
+    <script type="importmap">
+    {
+      "imports": {
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "react": "https://esm.sh/react@^19.2.3",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+        "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+      }
+    }
+    </script>
 </head>
 <body class="bg-white text-slate-600 antialiased selection:bg-amber-100 selection:text-amber-800">
     <div id="root"></div>
+    <!-- Load the application entry point as an ES module -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
